# Rag-langchain

./: .env.example  .gitignore  pyproject.toml  readme.md
app/: config.py  ingestion.py  logger.py  main.py  retrieval.py
